; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_SetDrawSync.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_SetDrawSync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_SetDrawSync(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @_CPU_ISR_Disable(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = or i32 1207959552, %6
  %8 = call i32 @GX_LOAD_BP_REG(i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = or i32 1191182336, %9
  %11 = call i32 @GX_LOAD_BP_REG(i32 %10)
  %12 = call i32 (...) @GX_Flush()
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @_CPU_ISR_Restore(i32 %13)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @GX_LOAD_BP_REG(i32) #1

declare dso_local i32 @GX_Flush(...) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
